--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: python
-dist: xenial
-sudo: required
 python:
     - "2.7"
     - "3.3"
     - "3.4"
     - "3.5"
     - "3.6"
-    - "3.7"
-    - "3.7-dev"
     - "pypy"
 install:
     - "pip install flake8"
@@ -20,3 +16,10 @@ matrix:
         - python: "pypy"
         - python: "3.7"
         - python: "3.7-dev"
+    include:
+        - python: "3.7"
+          dist: xenial
+          sudo: required
+        - python: "3.7-dev"
+          dist: xenial
+          sudo: required
